# promptquiver

./: .gitignore  .rustfmt.toml  AI_FEATURES.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_SPEC.md  GEMINI.md  PROGRESS.md  REFACTORING_SUGGESTIONS.md  TECHNICAL_DIRECTIVES.md  TEST_SCENARIOS.md  UI_SPEC.md  deny.toml  errors.json  export.toml  help.md  install.ps1  install.sh  justfile  mistral-rs-notes.md
.claude/: settings.json  settings.local.json
.claude/agents/: build-and-test.md
.claude/hooks/: lint-on-stop.ps1
.gemini/agents/: git-committer.md
.gemini/commands/: commit.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: app.rs  main.rs  tui.rs
app/tests/: autocomplete.rs  copy_indication.rs  duplicate.rs  e2e.rs  editing.rs  editor_scrollbar.rs  empty_state.rs  scrolling.rs  settings.rs  shortcuts_ui.rs  theming.rs  workflow.rs
app/tests/common/: mod.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  processor.rs  service.rs
docs/: CLAUDE_CODE_INTEGRATION_PLAN.md  CLAUDE_COMMANDS_DISCOVERY.md  DEVELOPMENT_GUIDE.md  FUNCTIONAL_SPEC.md  UI_SPEC.md  WIDGETS.md
infra/: Cargo.toml
infra/src/: ai.rs  claude.rs  lib.rs  service.rs
infra/src/ai/: candle.rs  download.rs  mod.rs  titler.rs
infra/src/clipboard/: mod.rs
infra/src/git/: mock.rs  mod.rs  real.rs
infra/src/storage/: memory.rs  mod.rs  sqlite.rs
promptquiver/: Cargo.toml
promptquiver/src/: app.rs  editor.rs  handlers.rs  lib.rs  list_module.rs  main.rs  tui.rs  types.rs
promptquiver/tests/: ai_titling.rs  autocomplete.rs  copy_indication.rs  ctrl_backspace.rs  discard_confirm.rs  draft_prompts.rs  duplicate.rs  editing.rs  editor_scrollbar.rs  editor_tab_lock.rs  export_import.rs  global_snippets.rs  global_view.rs  handlers_coverage.rs  metadata_editor.rs  navigation.rs  positional_insertion.rs  preview_mode.rs  projects.rs  repro_at.rs  scrolling.rs  settings.rs  shortcuts_ui.rs  staging_alias.rs  storage_isolation.rs  storage_sync.rs  tab_visibility.rs  theming.rs  wide_mode.rs  workflow.rs
promptquiver/tests/common/: mod.rs
ui/: Cargo.toml
ui/src/: data_manager.rs  editor.rs  editor_module.rs  footer.rs  header.rs  history_manager.rs  lib.rs  list.rs  list_module.rs  metadata_editor.rs  project_manager.rs  project_picker.rs  settings.rs  shortcuts.rs  statusline.rs  types.rs  utils.rs
