[workspace]
resolver = "2"
members = [
    "app",
    "contracts",
    "infra",
    "ui",
]

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_toml = { version = "1.1.2", package = "toml" }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
async-trait = "0.1.89"
regex = "1.11"
sha2 = "0.10"
arboard = "3.6.1"
directories = "6.0"
ratatui-textarea = "0.9"
# Note: ratatui-toaster and tui-popup might need specific versions, I'll check later.
# For now, let's stick to the core ones.

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
