[package]
name = "contracts"
version = "0.8.0"
edition = "2021"
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
regex.workspace = true

[dev-dependencies]
serde_json.workspace = true
