[package]
name = "infra"
version = "0.8.0"
edition = "2021"
license.workspace = true

[lints]
workspace = true

[dependencies]
contracts = { path = "../contracts" }
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
arboard.workspace = true
directories.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
nucleo-matcher.workspace = true
ignore = "0.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }
notify = "8.2.0"
yaml_serde = "0.10.4"
mistralrs = { version = "0.8.1", optional = true }

[features]
ai = ["dep:mistralrs"]
ai-cuda = ["ai", "mistralrs/cuda"]
ai-metal = ["ai", "mistralrs/metal"]

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "macros"] }
tempfile = "3.27"
