[package]
name = "promptquiver"
version = "0.6.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
contracts = { path = "../contracts" }
infra = { path = "../infra" }
ui = { path = "../ui" }
ratatui-textarea.workspace = true
ratatui-toaster.workspace = true
ratatui-themes.workspace = true
tui-popup.workspace = true

fuzzy-matcher.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
regex.workspace = true
notify = "8.2.0"

[dev-dependencies]
tempfile.workspace = true
