[package]
name = "promptquiver"
version = "0.8.0"
edition = "2021"
license.workspace = true

[lints]
workspace = true

[features]
ai = ["infra/ai"]
ai-cuda = ["ai", "infra/ai-cuda"]
ai-metal = ["ai", "infra/ai-metal"]

[dependencies]
contracts = { path = "../contracts" }
infra = { path = "../infra" }
ui = { path = "../ui" }
ratatui-textarea.workspace = true
ratatui-toaster.workspace = true
ratatui-themes.workspace = true
tui-popup.workspace = true
directories.workspace = true

tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
regex.workspace = true
notify = "8.2.0"
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
