[package]
name = "ui"
version = "0.6.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
contracts = { path = "../contracts" }
ratatui.workspace = true
ratatui-textarea.workspace = true
ratatui-toaster.workspace = true
ratatui-themes.workspace = true
tui-popup.workspace = true

tui-big-text.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
fuzzy-matcher.workspace = true
regex.workspace = true
